deploy: 3deaf3ea0bc2492e7bba85ad1063993d8fa1ac3c

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@ Indien u het laatste open venster van een toepassing sluit, sluit u ook de toepa
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="88" data-theme="gaia" style="--theme:gaia;">
 <h4 id="plaatje-openen-in-nieuw-tabblad">Plaatje openen in nieuw tabblad</h4>
 <ul>
-<li>Klik rechts op plaatje en kies &quot;Afbeelding openen in nieuw tabblad&quot;</li>
+<li>Klik rechts op plaatje om het context menu te openen en kies &quot;Afbeelding openen in nieuw tabblad&quot;</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="89" data-theme="gaia" style="--theme:gaia;">
@@ -795,12 +795,12 @@ Indien u het laatste open venster van een toepassing sluit, sluit u ook de toepa
 <p>Via bladwijzers beheren</p>
 </li>
 <li>
-<p>Rechtsklikken op bladwijzer op bladwijzerbalk en &quot;Bladwijzer verwijderen&quot; kiezen</p>
+<p>Rechtsklikken op bladwijzer op bladwijzerbalk om het context menu te openen en &quot;Bladwijzer verwijderen&quot; kiezen</p>
 </li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="96" data-theme="gaia" style="--theme:gaia;">
-<h6 id="voorbeeld-bladwijzer-verwijderen-door-rechts-te-klikken-op-bladwijzerbalk">Voorbeeld bladwijzer verwijderen door rechts te klikken op bladwijzerbalk</h6>
+<h6 id="voorbeeld-bladwijzer-verwijderen-van-de-bladwijzerbalk-met-het-context-menu">Voorbeeld bladwijzer verwijderen van de bladwijzerbalk met het context menu</h6>
 <p><img src="img/firefox-bladwijzer-verwijderen-uit-map.gif" alt="" style="width:1000px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="97" data-theme="gaia" style="--theme:gaia;">
@@ -1034,13 +1034,29 @@ gaat automatisch akkoord met alle cookies</p>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="116" data-theme="gaia" style="--theme:gaia;">
-<h4 id="bestanden-of-mappen-verplaatsen">Bestanden of mappen verplaatsen</h4>
+<h4 id="bestanden-of-mappen-verplaatsen-of-kopi%C3%ABren">Bestanden of mappen verplaatsen of kopiëren</h4>
 <ul>
 <li>
-<p>sleep ze naar gewenste map</p>
+<p>Drag and drop</p>
+<ul>
+<li>
+<p>sleep ze naar gewenste map voor verplaatsen</p>
 </li>
 <li>
-<p>knippen <code>CTRL+X</code> en plakken <code>CTRL+V</code></p>
+<p>sleep ze met <code>CTRL</code> ingedrukt om te kopiëren</p>
+</li>
+</ul>
+</li>
+<li>
+<p>Knippen, kopiëren en plakken</p>
+<ul>
+<li>
+<p>knippen <code>CTRL+X</code>, kopiëren <code>CTRL+C</code> en plakken <code>CTRL+V</code></p>
+</li>
+<li>
+<p>via het context menu van het bestand</p>
+</li>
+</ul>
 </li>
 </ul>
 </section>
@@ -1049,6 +1065,14 @@ gaat automatisch akkoord met alle cookies</p>
 <p><img src="img/bestanden-mappen-maken-en-slepen.gif" alt="" style="width:1000px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="118" data-theme="gaia" style="--theme:gaia;">
+<h5 id="voorbeeld-kopie-maken-van-map">Voorbeeld kopie maken van map</h5>
+<p><img src="img/bestand-kopieren-via-context-menu.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="119" data-theme="gaia" style="--theme:gaia;">
+<h5 id="voorbeeld-schermopname-verplaatsen">Voorbeeld schermopname verplaatsen</h5>
+<p><img src="img/bestanden-schermopname-verplaatsen.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="120" data-theme="gaia" style="--theme:gaia;">
 <h4 id="in-de-prullenbak-gooien-en-herstellen-uit-de-prullenbak">In de prullenbak gooien en herstellen uit de prullenbak</h4>
 <ul>
 <li>
@@ -1058,7 +1082,7 @@ gaat automatisch akkoord met alle cookies</p>
 <p>Ze staan dan niet meer tussen uw belangrijke bestanden</p>
 </li>
 <li>
-<p>rechtsklikken op bestand en &quot;In Prullenbak gooien&quot;</p>
+<p>Rechtsklikken op bestand om het context menu te openen en &quot;In Prullenbak gooien&quot; kiezen</p>
 </li>
 <li>
 <p><code>DELETE</code></p>
@@ -1072,17 +1096,17 @@ gaat automatisch akkoord met alle cookies</p>
 <p>Ga naar &quot;Prullenbak&quot;</p>
 </li>
 <li>
-<p>rechtsklikken op bestand en &quot;Terughalen uit Prullenbak&quot;</p>
+<p>Open het context menu van het bestand en kies &quot;Terughalen uit Prullenbak&quot;</p>
 </li>
 </ul>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="119" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="121" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-videos-in-de-prullenbak-gooien">Voorbeeld Video's in de prullenbak gooien</h5>
 <p><img src="img/bestanden-in-en-uit-prullenbak.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="120" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="122" data-theme="gaia" style="--theme:gaia;">
 <h4 id="prullenbak-legen">Prullenbak legen</h4>
 <ul>
 <li>
@@ -1094,26 +1118,26 @@ gaat automatisch akkoord met alle cookies</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="121" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="123" data-theme="gaia" style="--theme:gaia;">
 <h4 id="eigenschappen-van-bestanden-en-mappen">Eigenschappen van bestanden en mappen</h4>
 <ul>
 <li>
-<p>klik rechts op item en kies &quot;Eigenschappen&quot;</p>
+<p>Kies &quot;Eigenschappen&quot; uit het context menu</p>
 </li>
 <li>
 <p><code>ALT+ENTER</code></p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="122" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="124" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-eigenschappen-van-een-map">Voorbeeld eigenschappen van een map</h5>
 <p><img src="img/bestanden-mapeigenschappen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="123" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="125" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-afbeeldingseigenschappen">Voorbeeld afbeeldingseigenschappen</h5>
 <p><img src="img/bestanden-afbeeldingseigenschappen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="124" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="126" data-theme="gaia" style="--theme:gaia;">
 <h4 id="zoeken-van-mappen-of-bestanden">Zoeken van mappen of bestanden</h4>
 <ul>
 <li>
@@ -1124,7 +1148,7 @@ gaat automatisch akkoord met alle cookies</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="125" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="127" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-zoeken-in-document">Voorbeeld zoeken in document</h5>
 <ul>
 <li>
@@ -1141,11 +1165,11 @@ gaat automatisch akkoord met alle cookies</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="126" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="128" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-zoeken-in-document-1">Voorbeeld zoeken in document</h5>
 <p><img src="img/bestanden-zoek-in-inhoud.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="127" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="129" data-theme="gaia" style="--theme:gaia;">
 <h4 id="bladwijzer-maken-van-map-of-lokatie">Bladwijzer maken van map of lokatie</h4>
 <ul>
 <li>
@@ -1168,31 +1192,31 @@ en &quot;Verwijderen uit bladwijzers&quot; in het popup menu te kiezen</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="128" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="130" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-bladwijzer-maken-met-menuoptie">Voorbeeld bladwijzer maken met menuoptie</h5>
 <p><img src="img/bestanden-bladwijzer-via-menu.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="129" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="131" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-bladwijzer-maken-door-te-slepen">Voorbeeld bladwijzer maken door te slepen</h5>
 <p><img src="img/bestanden-bladwijzer-slepen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="130" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="132" data-theme="gaia" style="--theme:gaia;">
 <h4 id="bestanden-inpakken-en-uitpakken">Bestanden inpakken en uitpakken</h4>
 <ul>
 <li>
 <p>Bestanden inpakken</p>
 <ul>
 <li>
-<p>meerdere bestanden en of mappen in één archief bestand opslaan</p>
+<p>Meerdere bestanden en of mappen in één archief bestand opslaan</p>
 </li>
 <li>
-<p>klik rechts op map, bestand of bestandsselectie en kies &quot;Inpakken ...&quot;</p>
+<p>Open het context menu van de map, het bestand of de bestandsselectie en kies &quot;Inpakken ...&quot;</p>
 <ul>
 <li>
-<p>geef een archief naam op</p>
+<p>Geef een archief naam op</p>
 </li>
 <li>
-<p>klik op &quot;Maken&quot;</p>
+<p>Klik op &quot;Maken&quot;</p>
 </li>
 </ul>
 </li>
@@ -1200,52 +1224,52 @@ en &quot;Verwijderen uit bladwijzers&quot; in het popup menu te kiezen</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="131" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="133" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-archief-aanmaken">Voorbeeld archief aanmaken</h5>
 <p><img src="img/bestanden-inpakken.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="132" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="134" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>
 <p>Archief bestand uitpakken</p>
 <ol>
 <li>
-<p>Klik rechts op zip archief en kies &quot;Uitpakken naar ...&quot;</p>
+<p>Kies &quot;Uitpakken naar ...&quot; uit context menu van het zip archief</p>
 <ul>
 <li>
-<p>kies een map waarheen het archief moet worden uitgepakt</p>
+<p>Kies een map waarheen het archief moet worden uitgepakt</p>
 </li>
 <li>
-<p>bevestig dit door op &quot;Selecteren&quot; te klikken</p>
+<p>Bevestig dit door op &quot;Selecteren&quot; te klikken</p>
 </li>
 </ul>
 </li>
 <li>
-<p>Klik rechts op zip archief en kies &quot;Uitpakken&quot;. Dit pakt het archief uit in de map waar het archief staat.</p>
+<p>Kies &quot;Uitpakken&quot; uit het context menu. Dit pakt het archief uit in de map waar het archief staat.</p>
 </li>
 </ol>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="133" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="135" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-archief-uitpakken-naar">Voorbeeld archief uitpakken naar ...</h5>
 <p><img src="img/bestanden-uitpakken-naar.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="134" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="136" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-archief-uitpakken">Voorbeeld archief uitpakken</h5>
 <p><img src="img/bestanden-uitpakken.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="135" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="137" data-theme="gaia" style="--theme:gaia;">
 <h4 id="archief-bestand-inzien">Archief bestand inzien</h4>
 <ul>
 <li>dubbelklik zip bestand</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="136" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="138" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-inzien-archief">Voorbeeld inzien archief</h5>
 <p><img src="img/bestanden-inzien-archief.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="137" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="139" data-theme="gaia" style="--theme:gaia;">
 <h4 id="hulp-opvragen-over-de-bestandsbeheerder">Hulp opvragen over de bestandsbeheerder</h4>
 <ul>
 <li>
@@ -1278,11 +1302,11 @@ en &quot;Verwijderen uit bladwijzers&quot; in het popup menu te kiezen</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="138" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="140" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-hulp-over-sorteren-opvragen">Voorbeeld hulp over sorteren opvragen</h5>
 <p><img src="img/bestanden-hulp-sorteren.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="139" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="141" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-sneltoetsen-voor-de-bestandsbeheerder-tonen">Voorbeeld sneltoetsen voor de bestandsbeheerder tonen</h5>
 <p><img src="img/bestanden-sneltoetsen-tonen.gif" alt="" style="width:1000px;" /></p>
 </section>
