--- a/oefeningen.html
+++ b/oefeningen.html
@@ -396,7 +396,7 @@
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus/#14</code></p></li>
-<li><p>Klik rechts in de animatie en kies “Afbeelding openen in nieuw tabblad”</p></li>
+<li><p>Klik rechts in de animatie om het context menu te openen en kies “Afbeelding openen in nieuw tabblad”</p></li>
 <li><p>Bekijk grotere animatie</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
@@ -414,7 +414,7 @@
 </ul></li>
 <li><p>Scroll naar beneden naar de README naar “Onderdelen”</p></li>
 <li><p>Klik op de link “Presentatie”</p></li>
-<li><p>Maak een bladwijzer door rechts op <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> te klikken</p></li>
+<li><p>Maak een bladwijzer door op <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> aan de rechterzijde te klikken</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
@@ -427,7 +427,7 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Maak door rechts te klikken op de bladwijzerbalk en “Map toevoegen …” te kiezen een map “cursus” aan</p></li>
+<li><p>Open het context menu (rechtsklikken) van de bladwijzerbalk en kies “Map toevoegen …” en maak een map “cursus” aan</p></li>
 <li><p>Sleep de drie bladwijzers over de cursus naar deze map</p></li>
 <li><p>En order ze zo dat het resultaat er zo uitziet: <img src="img/firefox-bladwijzer-map-cursus-3-items.png" height="100" /></p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
@@ -541,6 +541,28 @@
 </ul></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
+<li><p>Een kopie maken van de <code>Documenten</code> map.</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Open het context menu van de map <code>Documenten</code> en kies “Kopiëren”</p></li>
+<li><p>Klik rechts op een open plek in de “Persoonlijke map” en kies “Plakken”</p></li>
+<li><p>Hoe heeft de bestandsbeheerder de kopie genoemd?</p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Een schermafdruk verplaatsen</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Navigeer naar <code>Afbeeldingen/Schermafdrukken</code></p></li>
+<li><p>Maak een schermafdruk met <code>ALT+PrintScreen</code></p></li>
+<li><p>Knip deze afbeelding via haar context menu</p></li>
+<li><p>Navigeer naar <code>Documenten</code></p></li>
+<li><p>Plak de schermafdruk via het context menu</p></li>
+<li><p>Ga terug naar <code>Afbeeldingen/Schermafdrukken</code></p></li>
+<li><p>Staat de schermafdruk hier nog?</p></li>
+<li><p>Navigeer terug naar <code>Documenten</code></p></li>
+<li><p>Gooi de schermafdruk in de prullenbak met <code>DELETE</code></p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
 <li><p>Map <code>Video's</code> in de prullenbak gooien en terughalen</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
@@ -609,7 +631,7 @@
 <li><p>Hoe groot is de map <code>bloemen</code>.</p>
 <ul>
 <li><p>Selecteer <code>bloemen</code></p></li>
-<li><p>Klik rechts en kies “Eigenschappen”</p></li>
+<li><p>Open het context menu en kies “Eigenschappen”</p></li>
 </ul></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
@@ -677,11 +699,13 @@
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Gebruik <code>CTRL+?</code> om het sneltoetsen venster te openen</p></li>
+<li><p>Gebruikt <code>PageDown</code> om tweemaal verder te bladeren</p></li>
 <li><p>Sluit het met <code>ESC</code></p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Met welke sneltoets kunt u een map of bestand hernoemen?</p></li>
 <li><p>Met welke sneltoets kunt u in één keer naar uw persoonlijke map terugkeren?</p></li>
+<li><p>Met welke sneltoets kunt terug gaan naar de lokatie waar u was? En met welke weer vooruit (<em>Hint: dit heet “Ga terug” en “Ga verder”</em>)? Probeer dit uitvoerig uit. U opent de bestandsbeheerder en gaat naar <code>Documenten</code> en dan naar <code>Afbeeldingen/Schermafdrukken</code> en probeert de gevonden sneltoetsen uit.</p></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
