--- a/samenvatting.html
+++ b/samenvatting.html
@@ -167,7 +167,7 @@
 </ol></li>
 <li><p>Plaatje openen in nieuw tabblad</p>
 <ul>
-<li>Klik rechts op plaatje en kies “Afbeelding openen in nieuw tabblad”</li>
+<li>Klik rechts op plaatje, om het context menu te openen en kies “Afbeelding openen in nieuw tabblad”</li>
 </ul></li>
 <li><p>Bladwijzers</p>
 <ul>
@@ -182,7 +182,7 @@
 <ul>
 <li><p>Klik op blauwe ster <img src="img/firefox-bladwijzer-ster-blauw.png" width="30" /> als u op die pagina bent, kies op de popup “Bladwijzer verwijderen”</p></li>
 <li><p>Via bladwijzers beheren</p></li>
-<li><p>Rechtsklikken op bladwijzer op bladwijzerbalk en “Bladwijzer verwijderen” kiezen</p></li>
+<li><p>Rechtsklikken op bladwijzer op bladwijzerbalk om het context menu te openen en “Bladwijzer verwijderen” kiezen</p></li>
 </ul></li>
 <li><p>Beheren</p>
 <ul>
@@ -256,13 +256,13 @@
 <li><p>via knippen, kopiëren en plakken</p>
 <ul>
 <li><p><code>CTRL+X</code> voor knippen, <code>CTRL+C</code> voor kopiëren en <code>CTRL+V</code> voor plakken</p></li>
-<li><p>via het rechtsklik menu</p></li>
+<li><p>via het context menu</p></li>
 </ul></li>
 </ul></li>
 <li><p>Bestanden of mappen in de prullenbak gooien</p>
 <ul>
 <li><p>geselecteerd bestand of map in de prullenbak gooien met <code>DELETE</code> toets</p></li>
-<li><p>via het rechtsklik menu “In Prullenbak gooien”</p></li>
+<li><p>via het context menu “In Prullenbak gooien”</p></li>
 </ul></li>
 <li><p>Prullenbak legen</p>
 <ul>
@@ -275,7 +275,7 @@
 </ul></li>
 <li><p>Eigenschappen van bestanden en mappen</p>
 <ul>
-<li><p>klik rechts op item en kies “Eigenschappen”</p></li>
+<li><p>Open het context menu van het item en kies “Eigenschappen”</p></li>
 <li><p><code>ALT+ENTER</code></p></li>
 </ul></li>
 <li><p>Zoeken van mappen of bestanden</p>
@@ -306,13 +306,13 @@
 </ul></li>
 <li><p>Archief bestand uitpakken</p>
 <ol type="1">
-<li><p>Klik rechts op zip archief en kies “Uitpakken naar …”</p>
+<li><p>Kies “Uitpakken naar …” uit het context menu van het archief</p>
 <ul>
 <li><p>kies een map waarheen het archief moet worden uitgepakt</p></li>
 <li><p>bevestig dit door op “Uitpakken” te klikken</p></li>
 <li><p>geef aan of u wel of niet de uitgepakte bestanden in de bestandsbeheerder wenst te zien</p></li>
 </ul></li>
-<li><p>Klik rechts op zip archief en kies “Uitpakken”. Dit pakt het archief uit in de map waar het archief staat.</p></li>
+<li><p>Kies “Uitpakken” uit het context menu van het archief. Dit pakt het archief uit in de map waar het archief staat.</p></li>
 </ol></li>
 <li><p>Archief bestand inzien</p>
 <ul>
