--- a/begrippen.html
+++ b/begrippen.html
@@ -24,6 +24,14 @@
  </div></p>
 </header>
 <dl>
+<dt>Actiemenu</dt>
+<dd><p>Menu in de bestandsbeheerder te activeren met <code>F10</code> of de drie puntjes bovenelkaar in de adresbalk</p>
+</dd>
+</dl>
+<figure>
+<img src="img/actiemenu-geopend.png" width="300" alt="" /><figcaption>Actiemenu</figcaption>
+</figure>
+<dl>
 <dt>Activiteiten modus</dt>
 <dd><p>Toestand van het GNOME desktop systeem om van programma te wisselen, van desktop te wisselen of om een programma te starten. U komt in deze modus met <code>SUPER</code>. U verlaat hem met <code>SUPER</code> of <code>ESC</code>. Zie <a href="https://help.gnome.org/users/gnome-help/stable/shell-introduction.html.nl#activities">GNOME docs</a>.</p>
 </dd>
@@ -51,6 +59,19 @@
 <figure>
 <img src="img/bovenbalk.png" style="width:90.0%" alt="" /><figcaption>Bovenbalk</figcaption>
 </figure>
+<dl>
+<dt>Context menu</dt>
+<dd><p>Een contextmenu, ook wel een rechtermuisknopmenu genoemd, is een pop-upmenu dat verschijnt wanneer je met de rechtermuisknop op een object, zoals een bestand, map, tekst of grafisch element, klikt in een grafische gebruikersinterface, een webbrowser, of een toepassing. Het contextmenu biedt gebruikers snel toegang tot verschillende acties en opties die relevant zijn voor het geselecteerde object, afhankelijk van de context van de klik.</p>
+</dd>
+</dl>
+<p>In een contextmenu kun je vaak de volgende soorten opties vinden:</p>
+<ol type="1">
+<li><p><strong>Basisbewerkingen:</strong> Dit omvat opties zoals kopiëren, knippen, plakken, verwijderen en hernoemen van bestanden en mappen.</p></li>
+<li><p><strong>Openen:</strong> Hiermee kun je een geselecteerd object openen met de standaardtoepassing of met een specifieke toepassing naar keuze.</p></li>
+<li><p><strong>Eigenschappen:</strong> Hiermee kun je de eigenschappen van een object bekijken, zoals bestandsgrootte, aanmaakdatum, en machtigingen.</p></li>
+<li><p><strong>Koppelingen:</strong> In webbrowsers kun je links openen in een nieuw tabblad, in een nieuw venster, of ze kopiëren naar het klembord.</p></li>
+</ol>
+<p>U opent het context menu van een item met <code>MENU</code> (menu toets) of <code>SHIFT+F10</code> of door rechts te klikken op het item.</p>
 <dl>
 <dt>Dash</dt>
 <dd><p>Onderdeel van de GNOME desktop. Hier staan je favoriete programma’s en je vindt hier de geopende programma’s.</p>
@@ -88,6 +109,14 @@
 <dt>Linux Documentation Project</dt>
 <dd><p>Documentatie (voor gevorderden) over je dingen op Linux voor elkaar krijgt, de zogeheten <em>Howtos</em>. Website <a href="https://tldp.org">tldp.org</a> (afkorting van <strong>The Linux Documentation Project</strong>).</p>
 </dd>
+<dt>Menu toets</dt>
+<dd><p>Toets op het toetsenbord die tussen de rechter super (windows) toets en de rechter control toets ligt. De toets activeert het context menu.</p>
+</dd>
+</dl>
+<figure>
+<img src="img/menu-key.jpeg" alt="" /><figcaption>Menu key</figcaption>
+</figure>
+<dl>
 <dt>Notificatie venster</dt>
 <dd><p>Venster met systeem notificaties, kalender en weer. Openen en sluiten met <code>SUPER+V</code>. Actieve notificatie focus geven met <code>SUPER+N</code>.</p>
 </dd>
@@ -102,7 +131,7 @@
 <dt>Programma</dt>
 <dd><p>zie toepassing.</p>
 </dd>
-<dt>Super</dt>
+<dt>Super toets</dt>
 <dd><p>De toets met het Windows logo. Op het toetsenbord ligt hij tussen de control en alt toets in. Ook wel de Windows-toets genoemd.</p>
 </dd>
 </dl>
