deploy: c871a70e07752608e1a6b6871ac8e84778bf772e

--- a/samenvatting.html
+++ b/samenvatting.html
@@ -333,6 +333,104 @@
 </ul></li>
 </ul></li>
 </ol>
+<h1 id="schakelen-tussen-vensters-of-werkbladen">Schakelen tussen vensters of werkbladen</h1>
+<ol type="1">
+<li><p>Vensterbeheer</p>
+<ol type="a">
+<li><p>Venster menu <img src="img/venster-menu.png" height="200" /></p>
+<ul>
+<li><p>Context menu van titelbalk</p></li>
+<li><p><code>ALT+SPATIEBALK</code></p></li>
+</ul></li>
+<li><p>Maximaliseren <code>SUPER+PIJLTJE_OMHOOG</code>/herstellen <code>SUPER+PIJLTJE_OMLAAG</code></p>
+<ul>
+<li><p>Dubbelklikken op de titelbalk</p></li>
+<li><p>Venstermenu</p></li>
+</ul></li>
+<li><p>Verplaatsen</p>
+<ul>
+<li><p>Aan de titelbalk slepen</p></li>
+<li><p><code>ALT+F7</code> of venstermenu</p>
+<ul>
+<li><p>muis bewegen, klik is plaatsen</p></li>
+<li><p><code>SHIFT</code> met pijltjes grote stappen</p></li>
+<li><p>pijltjes gewone stappen</p></li>
+<li><p><code>CTRL</code> met pijltjes kleine stapjes</p></li>
+</ul></li>
+</ul></li>
+<li><p>Vergroten/verkleinen</p>
+<ul>
+<li><p>Aan de randen slepen</p></li>
+<li><p><code>ALT+F8</code> of venstermenu</p>
+<ul>
+<li><p>muis bewegen, klik is plaatsen</p></li>
+<li><p><code>SHIFT</code> met pijltjes grote stappen</p></li>
+<li><p>pijltjes gewone stappen</p></li>
+<li><p><code>CTRL</code> met pijltjes kleine stapjes</p></li>
+</ul></li>
+</ul></li>
+<li><p>Verbergen</p>
+<ul>
+<li><p><code>SUPER+H</code> of venstermenu</p></li>
+<li><p>Terughalen</p>
+<ul>
+<li><p>op klikken in activiteiten modus</p></li>
+<li><p><code>ALT+TAB</code>, <code>SUPER+TAB</code></p></li>
+</ul></li>
+</ul></li>
+<li><p>Helft scherm gebruiken</p>
+<ul>
+<li><p>Links <code>SUPER+PIJLTJE_NAAR_LINKS</code></p></li>
+<li><p>Rechts <code>SUPER+PIJLTJE_NAAR_RECHTS</code></p></li>
+</ul></li>
+</ol></li>
+<li><p>Wisselen tussen open programma’s</p>
+<ol type="a">
+<li><p>Activiteiten modus</p></li>
+<li><p><code>ALT+TAB</code>, <code>SUPER+TAB</code> wisselen tussen open programma</p></li>
+<li><p><code>ALT+ESC</code> wisselt tussen open vensters van het programma dat nu de focus heeft</p></li>
+<li><p>Focus bovenbalk <code>ALT+CTRL+TAB</code></p></li>
+</ol></li>
+<li><p>Werkbladen</p>
+<ol type="a">
+<li><p>Wat zijn werkbladen</p>
+<ul>
+<li>Groeperen van dingen die u doet</li>
+</ul></li>
+<li><p>Schakelen tussen werkbladen</p>
+<ul>
+<li><p><code>SUPER+PageDown</code>, <code>SUPER+PageUp</code></p></li>
+<li><p>Activiteiten modus</p></li>
+<li><p>Applicatie modus</p></li>
+</ul></li>
+</ol></li>
+<li><p>Achtergrond aanpassen</p>
+<ul>
+<li>Context menu bureaublad <img src="img/bureaublad-context-menu.png" width="200" /></li>
+</ul></li>
+</ol>
+<h1 id="instellingen-aanpassen">Instellingen aanpassen</h1>
+<ul>
+<li><p>Schermvergrendeling uitschakelen</p>
+<ul>
+<li>Instellingen -&gt; Privacy -&gt; Scherm -&gt; Automatische schermvergrendeling</li>
+</ul></li>
+</ul>
+<figure>
+<img src="img/instellingen-privacy-scherm.png" width="400" alt="" /><figcaption>Schermvergrendeling in de instellingen toepassing</figcaption>
+</figure>
+<ul>
+<li><p>Toegankelijkheid</p>
+<ul>
+<li><p>Menu in bovenbalk <img src="img/toegankelijkheidsmenu.png" width="30" /></p></li>
+<li><p>Grote letters</p></li>
+</ul></li>
+<li><p>Nachtlicht</p>
+<ul>
+<li><p>via Systeemmenu</p></li>
+<li><p>Instellingen -&gt; Schermen -&gt; Nachtlicht</p></li>
+</ul></li>
+</ul>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
 <li><p>Installeren</p>
@@ -360,31 +458,6 @@
 </ol></li>
 <li><p>Standaardtoepassingen</p></li>
 <li><p><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></p></li>
-</ol>
-<h1 id="vensters-werkbladen-en-bureaubladen">Vensters, werkbladen en bureaubladen</h1>
-<ol type="1">
-<li><p>Vensterbeheer</p>
-<ol type="a">
-<li><p>groot maken</p></li>
-<li><p>verbergen</p></li>
-<li><p>helft scherm gebruiken</p></li>
-</ol></li>
-<li><p>Wisselen tussen open programma’s</p>
-<ol type="a">
-<li><p><code>ALT+TAB</code>, <code>SUPER+TAB</code> wisselen tussen open programma</p></li>
-<li><p>focus bovenbalk <code>ALT+CTRL+TAB</code></p></li>
-<li><p><code>ALT+ESC</code> wisselt tussen open vensters van het programma dat nu de focus heeft</p></li>
-</ol></li>
-<li><p>Werkbladen</p>
-<ol type="a">
-<li><p>Wat zijn werkbladen</p></li>
-<li><p>Schakelen tussen werkbladen</p></li>
-</ol></li>
-<li><p>Bureaubladen aanpassen</p>
-<ol type="a">
-<li><p>Achtergrond aanpassen</p></li>
-<li><p>Schermbeveiliging uitschakelen</p></li>
-</ol></li>
 </ol>
 <h1 id="online-accounts">Online accounts</h1>
 <ol type="1">
